--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,10 @@
 @import "pages/finearts";
 @import "pages/booking-confirmation";
 @import "pages/contact";
+@import "pages/profile";
+@import "pages/visitor-map";
+@import "pages/error-page";
+@import "pages/booking-details";
 
 
 .tickets{
