--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,15 @@
 .site-header{
     position: absolute; top: 0; left: 0; right: 0; z-index: 11; background: url(/images/header_pattern.png) center center no-repeat;
 
-    .container{display: flex; min-height: 160px; align-items: center; justify-content: space-between;}
+    &:after{
+        content: ""; width: 100%; height: 100%; position: absolute; top: 0; left: 0;
+        background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+        z-index: 1;
+        opacity: 0.5;
+        pointer-events: none;
+    }
+
+    .container{display: flex; min-height: 160px; position: relative; z-index: 2; align-items: center; justify-content: space-between;}
 
     .logo{display: block;}
     .lang-link{color: inherit; text-decoration: none;}
@@ -9,9 +17,12 @@
     .devider{width: 2px; height: 10px; display: block; background: white;}
 
     .right{color: white; font-size: px_rem(18px);}
+    .right .btn{min-height: 50px;}
     .list{gap: px_rem(40px);}
+    .nav-icon span{padding-top: 4px;}
     .menu-list{gap: px_rem(14px);}
     .sign-list{gap: px_rem(30px);}
+    .sign-list span{padding-top: 4px;}
 
     .signin-link{cursor: pointer; font-family: var(--font-medium);}
 }
