--- a/sass/components/_page_title_banner.scss
+++ b/sass/components/_page_title_banner.scss
@@ -3,7 +3,7 @@
 
     &:after{
         content: ""; position: absolute; top: 0; right: 0; bottom: 0; left: 0;
-        background: rgba(0, 0, 0, 1); opacity: 0.70; z-index: 1; pointer-events: none;
+        background: rgba(#202125, 1); opacity: 0.70; z-index: 1; pointer-events: none;
     }
 
     .image{position: absolute; width: 100%; height: 100%; z-index: 1; top: 0; right: 0; bottom: 0; left: 0; object-fit: cover;}
