--- a/sass/components/_ticket_card.scss
+++ b/sass/components/_ticket_card.scss
@@ -2,15 +2,35 @@
     background: rgba(245, 245, 245, 1); padding: 20px 20px 20px 30px; border-radius: 12px;
     display: grid; grid-template-columns: 1fr auto; gap: px_rem(76px); align-items: center;
 
-    .title{font-size: px_rem(32px); line-height: px_rem(44px); margin-bottom: 10px; text-transform: uppercase;}
+    .title{font-size: px_rem(32px); display: flex; justify-content: space-between; align-items: center; line-height: px_rem(44px); margin-bottom: 10px; text-transform: uppercase;}
+    .icon-list{gap: px_rem(35px); margin: px_rem(22px) 0;}
+    .icon-list .item{font-size: 14px;}
+    .icon-list .item span{display: block; padding-top: 2px;}
     .text{
         max-width: 382px; width: 100%;
-
-        .icon-list{gap: px_rem(35px); margin: px_rem(22px) 0;}
-        .icon-list .item{font-size: px_rem(14px);}
 
         .btn{min-width: 200px;}
     }
     .image{margin: 0; width: 214px; height: 310px; border-radius: 12px; overflow: hidden; background: #CCC;}
     .image img{width: 100%; height: 100%; object-fit: cover;}
+
+    &.v2{
+        grid-gap: 60px;
+
+        .title{font-size: 20px; margin-bottom: 16px; line-height: 1; font-family: var(--font-medium);}
+        .title span{display: block; padding-top: 2px;}
+        .title .status{
+            display: inline-flex; align-items: center; min-height: 30px; border: solid 1px rgba(39, 138, 113, 0.5);
+            color: rgba(39, 138, 113, 1); font-size: 1rem; padding: 3px 15px 1px; line-height: 1;
+            font-family: var(--font-light); border-radius: 50px;
+        }
+
+        &.expired .title .status{border-color: rgba(204, 38, 38, 0.3); background: rgba(204, 38, 38, 0.07); color: rgba(204, 38, 38, 1);}
+
+        .image{width: 176px; height: 264px;}
+
+        .icon-list{margin: 16px 0 0; gap: 10px; flex-direction: column; align-items: flex-start;}
+        .icon-list .item{font-size: 18px;}
+        .icon-list .item span{line-height: 27px;}
+    }
 }
