--- a/sass/pages/contact.scss
+++ b/sass/pages/contact.scss
@@ -1,3 +1,30 @@
-.contact{
+.contact-page{
+    background: rgba(37,38,42, 1);
 
+    .main-content{
+        padding: 0;
+        background: url(/images/contact-top-pattern.jpg) center top repeat-x;
+    }
+}
+.contact{
+    .block1{padding: 80px 0; position: relative;}
+
+    .section-title{color: white;}
+    .tagline{margin-bottom: 50px; max-width: 490px; color: rgba(255, 255, 255, 1);}
+
+    .columns{display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;}
+    .form{margin: 0; max-width: 662px; width: 100%;}
+    .form .grid{display: grid; margin-bottom: 36px; grid-template-columns: repeat(2, 1fr); grid-gap: 32px;}
+
+    .form-element.full{grid-column: 1 / -1;}
+    .form-element .icon{position: absolute; top: 10px; left: 0;}
+    .form-element .form-control{background: transparent; font-family: var(--font-light); color: white; padding: 2px 0 10px 22px; font-size: 14px; border-radius: 0; border-bottom: solid 1px rgba(255, 255, 255, 0.1);}
+
+    .action-button{max-width: 200px; width: 100%; display: flex; font-family: var(--font-medium);}
+
+    .address{max-width: 460px; display: grid; grid-gap: 26px;}
+    .address .item{color: white;}
+    .address .item label{display: block; color: var(--primary-color); margin-bottom: 4px; line-height: 20px; font-family: var(--font-medium);}
+
+    iframe{display: block; width: 100%; height: 370px; border: 0;}
 }
