--- a/sass/pages/error-page.scss
+++ b/sass/pages/error-page.scss
@@ -2,6 +2,7 @@
     .main-content{padding-top: 32px;}
     .site-header{
         position: relative;
+        background: url(/images/header_pattern2.png) center center repeat-x;
     }
     .site-header .right{color: black;}
     .site-header .devider{background: black;}
