--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -19,6 +19,8 @@
     .app-button{display: block;}
     .app-button img{display: block;}
 
+    .logo-holder img{max-height: 100px;}
+
     .copyright{border-top: solid 1px rgba(128, 128, 128, 0.4); font-family: var(--font-thin); font-size: 18px; text-align: center; padding: 1rem 0;}
 }
 .modal{
