--- a/sass/pages/visitor-map.scss
+++ b/sass/pages/visitor-map.scss
@@ -1,3 +1,8 @@
+.visitor-map-page{
+    .main-content{
+        background: url(/images/theme_pattern.png) center top repeat-x;
+    }
+}
 .visitor-map{
     .container{display: grid; grid-template-columns: 1fr auto; align-items: center;}
 
