--- a/sass/generic.scss
+++ b/sass/generic.scss
@@ -85,7 +85,7 @@ p{font-family: var(--font-thin);}
 .h-list{display: flex; align-items: center;}
 
 .title-1{font-size: px_rem(44px); margin: 0; line-height: 1; text-transform: uppercase;}
-.section-title{font-size: px_rem(44px); line-height: 1; font-family: var(--font-light); margin: 0; text-transform: uppercase;}
+.section-title{font-size: px_rem(44px); line-height: 1; font-family: var(--font-thin); margin: 0; text-transform: uppercase;}
 
 .pointer-events-none{pointer-events: none !important;}
 
