--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,11 +1,14 @@
 .home-page{
+    .site-header{
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.22) 0%, rgba(0, 0, 0, 0) 100%);
+    }
     .enter-the-center{
         position: relative;
-
-        &:after{content: ""; background: rgba(black, 0.64); width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0;}
+        z-index:2;
+        &:after{content: ""; background: rgba(black, 0.45); width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0;}
     
         .title{color: white; margin: 0; text-align: center; font-family: var(--font-light); z-index: 11; font-size: px_rem(36px); line-height: 44px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);}
-        .title .ar{display: block; font-family: var(--font-thin); margin-bottom: 0.5rem; font-size: 54px;}
+        .title .ar{display: block; font-family: var(--font-thin); margin-bottom: 0.7rem; font-size: 54px;}
         .title .en{display: block; text-transform: uppercase;}
 
         .background-video{width: 100%; height: 100vh; display: block; object-fit: cover; z-index: 0;}
@@ -19,7 +22,9 @@
 
     .home-block1{
         padding: 24px 0 20px;
-
+        position: relative;
+        z-index:2;
+        background-color: #fff;
         .grid{display: grid; position: relative; grid-template-columns: repeat(2, 1fr); grid-gap: 152px;}
         @media (min-width: 768px) {
             .grid:after{content: ""; position: absolute; width: 1px; height: 100%; background: rgba(217, 217, 214, 1); top: 0; left: 50%;}
@@ -47,9 +52,20 @@
     .plan-visit{
         min-height: 414px; padding: 80px 0 50px;
         position: relative;
-        background: url(/images/plan-visit.jpg) center center no-repeat; background-size: cover;
-
-        &:after{content: ""; pointer-events: none; z-index: 0; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background: rgba(black, 0.60);}
+        // background: url(/images/plan-visit.jpg) center center no-repeat; background-size: cover;
+        &__banner{
+            position: absolute;
+            width:100%;
+            height:100%;
+            left:0;
+            top:0;
+            z-index:-1;
+            &:after{content: ""; pointer-events: none; z-index: 0; width: 100%; height: 100%; position: absolute; top: 0; left: 0; background: rgba(black, 0.60);}
+        }
+        .btn{
+            pointer-events: none;
+        }
+        
     
         .title-area{margin-bottom: px_rem(40px); display: flex; align-items: center; justify-content: space-between; position: relative; z-index: 1; color: white;}
         .arrows{gap: 20px;}
@@ -59,9 +75,27 @@
         .swiper{position: relative; z-index: 11;}
         .item{color: white;}
         .item .btn{font-family: var(--font-medium); padding-top: 9px; text-transform: uppercase;}
-        .item p{margin: 0.75rem 0 1rem; max-width: 344px;}
+        .item p{margin: 0.75rem 0 1rem; max-width: 344px; line-height: 22px;}
 
-        .read-more{color: white; font-size: px_rem(18px); font-family: var(--font-light); text-decoration: none;}
+        .read-more{color: white; font-size: px_rem(18px); font-family: var(--font-light); text-decoration: none; position: relative; display: inline-flex;
+            align-items: center; gap:5px;
+            &:after{
+                content:"";
+                position: relative;
+                background-image: url("data:image/svg+xml,%3Csvg width='6' height='9' viewBox='0 0 6 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 7.74801L4.75645 4.37401L1 1.00001' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+                width:6px;
+                height:9px;
+                background-repeat: no-repeat;
+                background-size: contain;
+                transition: .5s ease all;
+                display:inline-block;
+            }
+            &:hover{
+                &:after{
+                    transform: translateX(5px);
+                }
+            }
+        }
     }
 
     .gallery{
